--- a/documentation/docs/concepts/queries.mdx
+++ b/documentation/docs/concepts/queries.mdx
@@ -6,7 +6,7 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 The core of `nestjs-query` is the `Query`, it is used by `@nestjs-query/query-graphql`, `@nestjs-query/query-typeorm`
-`@nestjs-query/query-sequelize` and `@nestjs-query/query-mongoose`.
+`@nestjs-query/query-sequelize`, `@nestjs-query/query-mongoose` and `@nestjs-query/query-typegoose`.
 
 The query interface contains three optional fields.
 
