--- a/documentation/docs/introduction/example.mdx
+++ b/documentation/docs/introduction/example.mdx
@@ -103,7 +103,7 @@ import {
 } from 'sequelize-typescript';
 
 @Table
-export class TodoItemEntity extends Model<TodoItemEntity> {
+export class TodoItemEntity extends Model<TodoItemEntity, Partial<TodoItemEntity>> {
   @PrimaryKey
   @AutoIncrement
   @Column
