docs(): Fix typo

--- a/documentation/docs/migration-guides/v0.24.x-to-v0.25.x.mdx
+++ b/documentation/docs/migration-guides/v0.24.x-to-v0.25.x.mdx
@@ -5,7 +5,7 @@ title: v0.24.x to v0.25.x
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-## Aggregate Queryies Return Arrays
+## Aggregate Queries Return Arrays
 
 In versions prior to `v0.24.0` aggregate queries returned a single response with just the aggregated values. In `v0.25.0` we have introduced a new `groupBy` option that requires aggregates to return arrays.
 
