docs(): Fix broken link

--- a/documentation/docs/graphql/authorization.mdx
+++ b/documentation/docs/graphql/authorization.mdx
@@ -466,7 +466,7 @@ If you authorize custom methods by using the `@AuthorizerFilter()`, you should p
 You can leave out the `operationName` to let the context use the name of the decorated Method.
 If you leave out the `readonly` property, it's inferred from the `operationGroup`.
 
-The `operationNames` of the generated CRUD resolver methods are similar to the ones of the [QueryService](../concepts/services.mdx):
+The `operationNames` of the generated CRUD resolver methods are similar to the ones of the [QueryService](../concepts/services.md):
 
 - `queryMany`
 - `findById`
